# App

./: CMakeLists.txt  compile_commands.json  gui.lua
.cache/clangd/index/: AEHelpers.h.6A692B9A19147210.idx  AERegistry.h.A343EFAA197630A9.idx  AIFF.h.6070ADC91112D7FC.idx  ATSFont.h.1CED66B45DA0864A.idx  ATSTypes.h.942F4463B2E17697.idx  AXAttributeConstants.h.A3E2618E9B2C7428.idx  AXError.h.7D696B5AF3B0E222.idx  AXNotificationConstants.h.37304E0ECD06FF44.idx  AXTextAttributedString.h.E8BA6C4356EBC577.idx  AXUIElement.h.35C40D57452F5E67.idx  AXValue.h.37AD9D7C2092252E.idx  AppKit.h.476AFB9796E3C438.idx  AppKitDefines.h.3111DCDD000BB91D.idx  AppKitErrors.h.29BF9D7B8803DBDF.idx  AppleEvents.h.50AFBAEEF91652BB.idx  Application.cpp.9782F66B0FCF0FA7.idx  Application.h.0868E0AEBF69AC49.idx  ApplicationServices.h.5DDEC68744FDC449.idx  AssertMacros.h.95BF61A8D11DD93D.idx  AuthSession.h.8C538C41518C75E7.idx  Authorization.h.647E50BE986A7878.idx  AuthorizationDB.h.0CD17F82D441204A.idx  AuthorizationTags.h.BE9B824F06FF038D.idx  Availability.h.02304541EB8AFE2F.idx  AvailabilityInternal.h.53F18B56F5AA10C5.idx  AvailabilityMacros.h.98E46884BB4E741D.idx  AvailabilityVersions.h.8BD8C7C2D0D5A55C.idx  BackupCore.h.7CA32CF11CB8DC56.idx  Block.h.D0E70F275E1C7559.idx  CABase.h.17C9A9EB077AC59E.idx  CALayer.h.2A55ABDF445EBFDC.idx  CAMediaTiming.h.24DAA7C58432AF1F.idx  CAOpenGLLayer.h.FAD77267E5331105.idx  CATransform3D.h.0697E15C54702FBE.idx  CFArray.h.572083017BA2B768.idx  CFAttributedString.h.B2271C88BA4052E0.idx  CFAvailability.h.335D901AD7DD75C6.idx  CFBag.h.0B8AA6E3560729C5.idx  CFBase.h.B564BB3F078A10A0.idx  CFBinaryHeap.h.814BB14EFFD29DD6.idx  (+1791 more)
src/: Application.cpp  Application.h  ImGuiBindings.cpp  ImGuiBindings.h  LuaEngine.cpp  LuaEngine.h  RenderableObject.h  Shader.cpp  Shader.h  SquareRenderer.cpp  SquareRenderer.h  main.cpp
